[feature] User authentication
