# src/Infrastructure/User/SignUp/SignUpException.php
@@ -1,0 +1,17 @@
+<?php
+
+declare(strict_types=1);
+
+namespace Legends\Game\Infrastructure\User\SignUp;
+
+use Legends\Game\Domain\Util\DomainException;
+
+final class SignUpException extends DomainException
+{
+    private const string TITLE = 'Sign Up';
+
+    public static function passwordTooShort(): self
+    {
+        return new self('Password has to be at least 8 characters long', self::TITLE);
+    }
+}
